# stmetrics

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  __init__ .py  conf.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
benchmark/: Benchmark.ipynb
docs/: basics.rst  benchmarks.rst  conf.py  credits.rst  environment.yml  fractal.rst  index.rst  installation.rst  jupyter.rst  metrics.rst  polar.rst  readthedocs.yml  requeriments.txt  requirements.txt  utils.rst
docs/examples/: Benchmark.ipynb  TimeMetrics.ipynb
docs/source/: about.rst  basics.rst  citation.rst  conf.py  contributors.rst  dependencies.rst  fractal.rst  index.rst  installation.rst  license.rst  metrics.rst  polar.rst  publications.rst  spatial.rst  utils.rst
docs/source/_build/doctrees/: basics.doctree  contributors.doctree  environment.pickle  fractal.doctree  index.doctree  installation.doctree  license.doctree  metrics.doctree  polar.doctree  spatial.doctree  utils.doctree
docs/source/_build/html/: .buildinfo  (+15 more)
docs/source/examples/: Benchmark.ipynb  TimeMetrics.ipynb
example/: TimeMetrics.ipynb
example/img/: evi_corte.tif  evi_corte.tif.aux.xml
source/: conf.py  index.rst
src/: basics.py  polar.py
stmetrics/: __init__.py  __main__.py  basics.py  experimental.py  fractal.py  metrics.py  phenology.py  phenometrics.py  polar.py  spatial.py  utils.py
tests/: test.py  test_gmetrics.py
tsmetrics/: __init__ .py  __init__.py  __main__.py  basics.py  fractal.py  metrics.py  phenometrics.py  polar.py  utils.py
tsmetrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+7 files in other folders)
