[tool.poetry]
name = "stmetrics"
version = "0.1.8"
description = "A package to compute features from Satellite Image Time Series (SITS)."
authors = ["Brazil Data Cube Team <brazildatacube@dpi.inpe.br>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "==3.10.13"
dtaidistance = "==2.3.11"
pandas = "==2.1.4"
matplotlib = "==3.8.2"
numba = "==0.58.1"
numpy = "==1.26.2"
xarray = "==2023.12.0"
rasterio = "==1.3.9"
shapely = "==2.0.2"
affine = "==2.4.0"
descartes = "==1.1.0"
connected-components-3d = "==3.12.4"
rasterstats = "==0.19.0"
pointpats = "==2.4.0"
geopandas = "==0.14.1"
nolds = "==0.5.2"
urllib3 = "~1"
fastremap = "==1.14.0"
scikit-learn = "==1.3.2"



[tool.poetry.group.dev.dependencies]
pytest = "==7.4.3"
flake8 = "==6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
